wine_cellar/assets/css/card.css
.wine_card__container {
  margin-block-start: 5rem;
  display: flex;
  width: 100%;
  align-items: stretch;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 20px;
}

.wine_card {
  background-color: white;
  border-radius: 10px;
  width: 100%;
  overflow: hidden;

  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  
  p {
    margin: 0;
  }

  a {
    text-decoration: inherit;
    color: inherit;
  }

  @media screen and (min-width: 50em) {
    width: calc(50% - 20px); /* Half of container width minus the gap */
  }
}

.wine_card__content {
  padding: 25px 25px 15px 25px;
}

.wine_card__title {
  margin-top: 0px;
  margin-bottom: 10px;
}

.text--gray {
  color: #6f766f;
}

.wine_card__stock {
  display: flex;
  justify-content: flex-end;
}

